--- a/netlify.toml
+++ b/netlify.toml
@@ -4,24 +4,24 @@ publish = "public"
 
 [build.environment]
 # (Optional) Text in landing page button
-LANDING_BUTTON = "Go away"
+LANDING_BUTTON = "Click to steal some👆"
 # (Optional) Site description on landing page
-LANDING_DESCRIPTION = "You Shouldntr be here"
+LANDING_DESCRIPTION = "I have nothing but intelligence."
 # (REQUIRED) The Markdown page linked to landing page button (e.g. put home for ./home.md)
-LANDING_PAGE = "Shops/Travel God Shop"
+LANDING_PAGE = "Travel God Shop"
 # (Optional) Site title on landing page
 LANDING_TITLE = "I love obsidian-zola! 💖"
 PYTHON_VERSION = "3.8"
 # (REQUIRED) Site repo URL
 REPO_URL = "https://github.com/Conner-Lavineway/Player-Library-Items"
 # (Optional) Site title in navbar
-SITE_TITLE = "Willowdale Library"
+SITE_TITLE = "Someone's Second 🧠"
 # (Optional) Site title in browser tab (leave blank to use SITE_TITLE)
 SITE_TITLE_TAB = ""
 # (REQUIRED) Netlify site URL
 SITE_URL = "https://willowdale-library.netlify.app/"
 # (Optional) Site Timezone
-TIMEZONE = "North America/Winnipeg"
+TIMEZONE = "Asia/Hong_Kong"
 ZOLA_VERSION = "0.15.2"
 # (Optional, default title) How to sort notes inside each section on the right sidebar ("date" or "title"). Subsections on side bar are sorted by title, the sort order cannot be changed.
 SORT_BY = "title"
