--- a/netlify.toml
+++ b/netlify.toml
@@ -8,7 +8,7 @@ LANDING_BUTTON = "Click to steal some👆"
 # (Optional) Site description on landing page
 LANDING_DESCRIPTION = ""
 # (REQUIRED) The Markdown page linked to landing page button (e.g. put home for ./home.md)
-LANDING_PAGE = "Travel God Shop"
+LANDING_PAGE =/Shops/Travel-God-Shop.md
 # (Optional) Site title on landing page
 LANDING_TITLE = "Welcome to the Library"
 PYTHON_VERSION = "3.8"
