--- a/netlify.toml
+++ b/netlify.toml
@@ -4,11 +4,11 @@ publish = "public"
 
 [build.environment]
 # (Optional) Text in landing page button
-LANDING_BUTTON = "Click to steal some👆"
+LANDING_BUTTON = "Enter the Library"
 # (Optional) Site description on landing page
 LANDING_DESCRIPTION = ""
 # (REQUIRED) The Markdown page linked to landing page button (e.g. put home for ./home.md)
-LANDING_PAGE ="/Shops/Travel-God-Shop.md"
+LANDING_PAGE ="/shops/travel-god-shop.md"
 # (Optional) Site title on landing page
 LANDING_TITLE = "Welcome to the Library"
 PYTHON_VERSION = "3.8"
