--- a/netlify.toml
+++ b/netlify.toml
@@ -8,7 +8,7 @@ LANDING_BUTTON = "Enter the Library"
 # (Optional) Site description on landing page
 LANDING_DESCRIPTION = ""
 # (REQUIRED) The Markdown page linked to landing page button (e.g. put home for ./home.md)
-LANDING_PAGE ="shops/travel-gods-shop.md"
+LANDING_PAGE ="shops/travel-gods-shop/"
 # (Optional) Site title on landing page
 LANDING_TITLE = "Welcome to the Library"
 PYTHON_VERSION = "3.8"
