--- a/netlify.toml
+++ b/netlify.toml
@@ -10,7 +10,7 @@ LANDING_DESCRIPTION = ""
 # (REQUIRED) The Markdown page linked to landing page button (e.g. put home for ./home.md)
 LANDING_PAGE ="shops/travel-gods-shop/"
 # (Optional) Site title on landing page
-LANDING_TITLE = "Welcome to the Travle Gods Shop"
+LANDING_TITLE = "Welcome to the Traval Gods Shop"
 PYTHON_VERSION = "3.8"
 # (REQUIRED) Site repo URL
 REPO_URL = "https://github.com/Conner-Lavineway/Player-Library-Items"
